# spessasynth-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: midi_to_wav.rs
src/: lib.rs  render.rs
src/midi/: basic_midi.rs  enums.rs  midi_loader.rs  midi_message.rs  midi_track.rs  mod.rs  types.rs
src/midi/midi_tools/: get_gs_on.rs  get_note_times.rs  midi_builder.rs  midi_editor.rs  midi_writer.rs  mod.rs  rmidi_writer.rs  used_keys_loaded.rs
src/sequencer/: mod.rs  play.rs  process_event.rs  process_tick.rs  sequencer.rs  song_control.rs  types.rs
src/soundbank/: enums.rs  mod.rs  sound_bank_loader.rs  types.rs
src/soundbank/basic_soundbank/: basic_global_zone.rs  basic_instrument.rs  basic_instrument_zone.rs  basic_preset.rs  basic_preset_zone.rs  basic_sample.rs  basic_soundbank.rs  basic_zone.rs  generator.rs  generator_types.rs  midi_patch.rs  mod.rs  modulator.rs  modulator_source.rs  preset_resolver.rs  preset_selector.rs
src/soundbank/downloadable_sounds/: articulation.rs  connection_block.rs  connection_source.rs  default_dls_modulators.rs  dls_sample.rs  dls_verifier.rs  downloadable_sounds.rs  instrument.rs  mod.rs  region.rs  sample.rs  wave_link.rs  wave_sample.rs
src/soundbank/soundfont/read/: mod.rs  (+9 more)
src/synthesizer/: enums.rs  mod.rs  processor.rs  types.rs
src/synthesizer/audio_engine/: mod.rs  synthesizer_core.rs
src/utils/: big_endian.rs  bit_mask.rs  indexed_array.rs  little_endian.rs  load_date.rs  loggin.rs  midi_hacks.rs  mod.rs  other.rs  riff_chunk.rs  string.rs  sysex_detector.rs  variable_length_quantity.rs  write_wav.rs
(+65 files in other folders)
